feat: add JNIExample